--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
 .box {
   height: 500px;
-  background-color: gray;
+  background-color: darkgrey;
 }
 
 .Daylight {
   background-color: yellow;
-}
-
-.Night {
-  background-color: darkblue;
 }
